# d2c-ai-employee

./: .dockerignore  .env.example  .gitignore  Dockerfile.app  LIMITATIONS.md  Makefile  README.md  alembic.ini  bench_results.json  docker-compose.yml  eval-honesty.md  pyproject.toml
apps/chat-ui/: README.md  package-lock.json  package.json
docs/: eval-honesty.md
docs/plans/: 2026-05-10-d2c-ai-employee-implementation-plan.md
evals/: bench_prompts.yml  citation_contract_test.py  golden.yml  red_team.yml
mock_saas/: Dockerfile  entrypoint.sh  server.py
mock_saas/seed/: generate.py
scripts/: README.md  bench_chat_latency.py  bootstrap.py  pull_demo_data.py  run_demo.py  seed_demo_tenant.py  seed_examples.py  smoke_real.py  test_all_endpoints.py  test_chat_rigorous.py  test_sse_edge.py
tests/: conftest.py
tests/agents/: test_base.py  test_meta_pauser.py  test_pincode_cod_blocker.py  test_rto_risk_flagger.py  test_scheduler.py
tests/api/: test_chat_routes.py  test_metrics_route.py  test_webhooks.py
tests/chat/: test_orchestrator.py  test_planner.py  test_renderer.py  test_tools.py  test_verifier.py
tests/connectors/: test_base.py  test_rate_limit_integration.py
tests/ingestion/: test_worker.py
tests/llm/: test_client_protocol.py  test_embeddings.py  test_gemini_translation.py
tests/mock_saas/: test_seed_shape.py
tests/scaffolding/: test_queues.py  test_rate_limit.py
tests/semantic_layer/: test_compiler.py  test_example_generator.py  test_executable.py
tests/udm/: test_normalize_meta.py  test_normalize_shiprocket.py  test_normalize_shopify.py  (+1 more)
(+19 files in other folders)
